# rex

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
bench/: bench_marimo.py  bench_mlx.py  bench_rerun.py
skills/rex/: SKILL.md
src/: bump.py
src/rex/: __init__.py  api.py  cli.py  indexer.py  mcp_server.py  storage.py  tui.py
tests/: test_api.py  test_core.py  test_fuzzy.py  test_project_index.py  test_reexports.py  test_search_ranking.py
