[project]
name = "rex"
version = "0.1.0"
description = "Fast Python symbol search for .venv packages"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.scripts]
rex = "rex.cli:main"
rex-mcp = "rex.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rex"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
